--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="style.css" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
+    <link rel='stylesheet'
+        href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel='stylesheet'
+        href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-straight/css/uicons-thin-straight.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css'>
+    <link rel='stylesheet'
+        href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'><!-- html-->
+    <link rel='stylesheet'
+        href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'><!-- css -->
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-chubby/css/uicons-solid-chubby.css'>
+    <!-- python -->
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+    <!-- react -->
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css'>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <link rel="icon" type="imge/x-icon" href="me8.ico">
+    <link rel="icon" type="image/x-icon" href="me8.ico">
 </head>
+
 <body>
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
         <nav class="navbar">
-            <a href="#" style="--i:1" class="active">Home</a>
-            <a href="#" style="--i:2">About</a>
-            <a href="#" style="--i:3">Skill</a>
-            <a href="#" style="--i:4">Portfolio</a>
-            <a href="#" style="--i:5">Contact</a>
+            <a href="#home" style="--i:1" class="active">Home</a>
+            <a href="#about" style="--i:2">About</a>
+            <a href="#services" style="--i:3">Skill</a>
+            <a href="#skills" style="--i:4">Portfolio</a>
+            <a href="#contact" style="--i:5">Contact</a>
         </nav>
     </header>
-    <section class="home">
-        <div class="home-content" >
+    <section class="home" id="home">
+        <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>SAW MIN THET KHINE</h1>
             <h3>And I'm a <span class="text"></span></h3>
@@ -41,25 +57,197 @@
         </div>
         <span class="home-imgHover"></span>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-img">
             <img src="me5.jpg">
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>University Student</h4>
-            <p> 
-                Hi, I’m Saw Min — an aspiring developer passionate about using technology to make communication easier and improve people’s lives. 
-                I’m especially interested in creating tools that break down language barriers and exploring how AI can support safer and higher-quality healthcare.
+            <p>
+                Hi, I’m Saw Min — an aspiring developer passionate about using technology to make communication easier
+                and improve people’s lives.
+                I’m especially interested in creating tools that break down language barriers and exploring how AI can
+                support safer and higher-quality healthcare.
                 I’m constantly working to strengthen my skills in programming, system design, and AI.
-                I like learning independently, digging into resources, and experimenting with ideas until they become something real.
+                I like learning independently, digging into resources, and experimenting with ideas until they become
+                something real.
                 When I get stuck, I research, test, and explore until I find a solution.
-                My goal is to build meaningful technology — from language-bridge communication tools to AI systems that support medical professionals.
+                My goal is to build meaningful technology — from language-bridge communication tools to AI systems that
+                support medical professionals.
                 I want to grow into a developer who creates tools that genuinely help people around the world.
             </p>
             <a href="#" class="btn-box">More About Me</a>
         </div>
     </section>
+    <section class="service" id="services">
+        <div class="container">
+            <h1 class="sub-title">My <span>Projects</span></h1>
+            <div class="services-list">
+                <div>
+                    <i class="services-logo" style="color:aqua"><i class="fi fi-tr-drawer-alt"></i></i>
+                    <h2>Learn Solo</h2>
+                    <p> LearnSolo is my personal learning sandbox — a place where I build and experiment with
+                        educational tools.
+                        From math solvers to formula libraries to upcoming interactive notes, the site is all about
+                        making self-learning fast, simple, and enjoyable.
+                        I use LearnSolo to test new ideas in web development, from dynamic content loading to math
+                        rendering, and I’m continuously adding features as I learn new skills.
+                        This project represents my journey as a developer: learning, building, breaking things, and
+                        improving — completely solo.
+                    </p>
+                    <a href="#" class="read">learn more</a>
+                </div>
+                <div>
+                    <i class="services-logo" style="color:aqua"><i class="fi fi-rr-e-learning"></i></i>
+                    <h2>Learn Solo</h2>
+                    <p> LearnSolo is my personal learning sandbox — a place where I build and experiment with
+                        educational tools.
+                        From math solvers to formula libraries to upcoming interactive notes, the site is all about
+                        making self-learning fast, simple, and enjoyable.
+                        I use LearnSolo to test new ideas in web development, from dynamic content loading to math
+                        rendering, and I’m continuously adding features as I learn new skills.
+                        This project represents my journey as a developer: learning, building, breaking things, and
+                        improving — completely solo.
+                    </p>
+                    <a href="#" class="read">learn more</a>
+                </div>
+                <div>
+                    <i class="services-logo" style="color:aqua"><i class="fi fi-ts-degree-credential"></i></i>
+                    <h2>Learn Solo</h2>
+                    <p> LearnSolo is my personal learning sandbox — a place where I build and experiment with
+                        educational tools.
+                        From math solvers to formula libraries to upcoming interactive notes, the site is all about
+                        making self-learning fast, simple, and enjoyable.
+                        I use LearnSolo to test new ideas in web development, from dynamic content loading to math
+                        rendering, and I’m continuously adding features as I learn new skills.
+                        This project represents my journey as a developer: learning, building, breaking things, and
+                        improving — completely solo.
+                    </p>
+                    <a href="#" class="read">learn more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <h1 class="sub-title">My <span>Skills</span></h1>
+    <section class="skills" id="skills">
+        <!-- <div class="container1" id="skills">
+            <div class="Technical-bars">
+                <h1 class="heading1">Technical Skills</h1>
+                <div class="bar"><i style="color: #c95d2e" class="fi fi-sr-html-file"></i>
+                    <div class="info">
+                        <span>HTML</span>
+                    </div>
+                    <div class="progress-line html">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar"><i style="color: #38b3ff" class="fi fi-sr-browser-css"></i>
+                    <div class="info">
+                        <span>CSS</span>
+                    </div>
+                    <div class="progress-line css">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar"><i style="color: #b0bc1e" class="fi fi-sr-javascript"></i>
+                    <div class="info">
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="progress-line javascript">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar"><i style="color: #1b48ff" class="fi fi-brands-python"></i>
+                    <div class="info">
+                        <span>Python</span>
+                    </div>
+                    <div class="progress-line python">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar"><i style="color: #31e6fe" class="fi fi-br-react"></i>
+                    <div class="info">
+                        <span>React</span>
+                    </div>
+                    <div class="progress-line react">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <div class="container1">
+            <!-- <h1 class="heading1">Professional Skill</h1> -->
+            <dv class="radial-bars">
+                <div class="radial-bar">
+                    <svg x="0px" y="0px" viewBox=" 0 0 200 200">
+                        <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                        <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+                    </svg>
+                    <div class="percentage">N2</div>
+                    <div class="text">Japanese Language Profeciency Test</div>
+                </div>
+                <div class="radial-bar">
+                    <svg x="0px" y="0px" viewBox=" 0 0 200 200">
+                        <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                        <circle class="path path-2" cx="100" cy="100" r="80"></circle>
+                    </svg>
+                    <div class="percentage">3</div>
+                    <div class="text">Java</div>
+                </div>
+                <div class="radial-bar">
+                    <svg x="0px" y="0px" viewBox=" 0 0 200 200">
+                        <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                        <circle class="path path-3" cx="100" cy="100" r="80"></circle>
+                    </svg>
+                    <div class="percentage">4</div>
+                    <div class="text">Microsoft Excel</div>
+                </div>
+
+                <div class="radial-bar">
+                    <svg x="0px" y="0px" viewBox=" 0 0 200 200">
+                        <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                        <circle class="path path-4" cx="100" cy="100" r="80"></circle>
+                    </svg>
+                    <div class="percentage">600</div>
+                    <div class="text">TOEIC</div>
+                </div>
+            </dv>
+        </div>
+    </section>
+    <section class="contact" id="contact">
+        <div class="contact-text">
+            <h2>Contact <span>Me</span></h2>
+            <h4>Let's worok together</h4>
+            <p>To make it functional, add the content property with the desired text for each skill bar. For example,
+                update the rules like this (assuming you want to show the percentages)
+                To make it functional, add the content property with the desired text for each skill bar. For example,
+                update the
+                rules like this (assuming you want to show the percentages)</p>
+            <div class="contact-list">
+                <li><i class="fi fi-sr-envelope"></i>minthetkhine195@gmail.com</li>
+                <li><i class="fi fi-sr-phone-call"></i>0906013299</li>
+            </div>
+            <div class="home-sci">
+                <a href="#" style="--i:7"><i class="fi fi-brands-facebook"></i></a>
+                <a href="#" style="--i:8"><i class="fi fi-brands-instagram"></i></a>
+                <a href="#" style="--i:9"><i class="fi fi-brands-linkedin"></i></a>
+                <a href="#" style="--i:10"><i class="fi fi-brands-youtube"></i></a>
+            </div>
+
+        </div>
+        <div class="contact-form">
+            <form action="">
+                <input type="" placeholder="Enter Your Name" required>
+                <input type="email" placeholder="Enter Your Email" required>
+                <input type="" placeholder="Enter Your Subject">
+                <textarea name="" id="" cols="40" rows="10" placeholder="Enter Your Message" required></textarea>
+                <input type="submit" value="submit" class="send">
+            </form>
+        </div>
+    </section>
+
     <script src="main.js"></script>
 </body>
+
 </html>
